objects/Toro_QuoteItem__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Reason__c</fullName>
        <label>Approval Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_of_DN__c</fullName>
        <description>Store percentage entered by user. This value will be used in calculating award price when price method is &quot;% of DNet&quot;</description>
        <label>Award % of DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DNet_Price_2__c</fullName>
        <description>This field is the same as Revvy_Suggested_Price and populated via trigger.</description>
        <label>DNet Price Do Not Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price__c</fullName>
        <label>DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store product name/description during support plus process</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <description>Setup Fee Percentage for National Account</description>
        <label>Setup Fee Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FreezePricing__c</fullName>
        <formula>QuoteItem__r.REVVY__FreezePricing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freeze Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSRP_Price__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Style__c</fullName>
        <label>Misc Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mn_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MN Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>Toro Quote Item</relationshipLabel>
        <relationshipName>Toro_Quote_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Off_MSRP__c</fullName>
        <description>Store value of &quot;% off MSRP&quot; entered by user in pricing program page.</description>
        <label>% Off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_off_MSRP__c</fullName>
        <description>Store the original percent of MSRP</description>
        <label>Original % off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oroginal_of_DNet__c</fullName>
        <description>Original % of DNet</description>
        <label>Oroginal % of DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Parts_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PricingMethodValue__c</fullName>
        <description>Store pricing method value user enters. Pricing Method could be one of % off MSRP, % of DNet, Total award price, GP$, and GP%.</description>
        <label>Pricing Method Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Program__c</fullName>
        <description>Store value of &quot;Pricing Program&quot; selected by user from &quot;Choose Pricing Program&quot; page. This value is applied to all quote items in this quote.</description>
        <label>Pricing Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>QuoteItem__r.REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MODEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>QuoteItem__r.REVVY__Catalog_Node__r.REVVY__LocaleName_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DESCRIPTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Toro Quote Item</relationshipLabel>
        <relationshipName>Toro_Quote_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QI_Rebate__c</fullName>
        <formula>Toro_Total_Rebate__c -  Toro_Rollup_Subline_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>QuoteItem__r.REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteItem__c</fullName>
        <label>QuoteItem</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>Toro Quote Item</relationshipLabel>
        <relationshipName>Toro_Quote_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rebate_as_a_of_DN__c</fullName>
        <description>Store value retrieved from Pricing Program table based on a value of either &quot;% off MSRP&quot; or &quot;% of DNet&quot; entered by a user on &quot;Choose Pricing Program&quot; page.</description>
        <label>RBT%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Select_Price_Program_Type__c</fullName>
        <description>@Deprecated</description>
        <label>Select Price Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Support Chart A</fullName>
                </value>
                <value>
                    <fullName>Market Support Chart B</fullName>
                </value>
                <value>
                    <fullName>Market Support Chart Large Package</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contract Price Minnesota State</fullName>
                </value>
                <value>
                    <fullName>------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_a_Price_Method__c</fullName>
        <label>Select a Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of DNET</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>% off MSRP</fullName>
                </value>
                <value>
                    <fullName>% of Gross Profit Margin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Off_MSRP__c</fullName>
        <description>Percent Off MSRP selected from price program. This is used to store original percent off MSRP.</description>
        <label>Selected Percent Off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Amount__c</fullName>
        <formula>Toro_Extended_Award_Price__c * Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if quote item is applied to support plus</description>
        <label>SP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Store value entered by distributor during support plus process</description>
        <label>Support Plus Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Price__c</fullName>
        <label>Support (Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Blend_Of_DN__c</fullName>
        <label>Blend Of DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_DNetWOTPPAllied__c</fullName>
        <label>DNet Without TPP and Allied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_DNet_Price__c</fullName>
        <description>[Extended DNet price including children rollup extended DNet price. ]</description>
        <label>Total Ext DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Distributor_Responsibility__c</fullName>
        <label>Distributor Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_DNet_Price__c</fullName>
        <description>This is the award price for a quote item when price method is &quot;% of DNet&quot;.</description>
        <label>Extended Award DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_MSRP_Price__c</fullName>
        <description>This is the award price for a quote item when price method is &quot;% off MSRP&quot;.</description>
        <label>Extended Award MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_Price__c</fullName>
        <label>EXT AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_DNet_Price__c</fullName>
        <label>EXT  DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_MSRP_Price__c</fullName>
        <label>EXT MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Fee_Amount__c</fullName>
        <label>Total Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Gross_Profit_Percent__c</fullName>
        <label>GP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Gross_Profit_Value__c</fullName>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Product_Tier__c</fullName>
        <formula>QuoteItem__r.REVVY__Catalog_Node__r.Toro_Product_Tier__c</formula>
        <label>Toro Product Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_Quantity__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toro_Rebate__c</fullName>
        <label>Toro Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_DNet_Price__c</fullName>
        <description>This field is used in formula field DNet_Price__c which is used in rebate calculation.</description>
        <label>Rollup DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_Num_of_SubLines_for_Rebate__c</fullName>
        <label>Rollup Num of SubLines for Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_Partner_Products__c</fullName>
        <description>Roll up partner products whose product Id starts with &quot;L&quot;</description>
        <label>Rollup Partner Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_Subline_Rebate__c</fullName>
        <label>Rollup Subline Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_Sum_percent_Rebate_of_Dnet__c</fullName>
        <description>Rollup - Sum percentage of all Sublines Rebate  as a % of DNet; used to get Rebate % of Dnet for quoteitem</description>
        <label>Rollup Sum percent Rebate of Dnet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_TPP__c</fullName>
        <description>Roll up on Toro sub lines whose product Id starts with &quot;TPP&quot;</description>
        <label>Rollup TPP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Award_price__c</fullName>
        <label>Total Award price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Extended_Award_Price__c</fullName>
        <label>Total Extended Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Extended_DNet_Price__c</fullName>
        <label>EXT  DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Extended_MSRP_Price__c</fullName>
        <label>Total Ext MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_MSRP_Percentage__c</fullName>
        <label>Total % off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Rebate__c</fullName>
        <label>Total Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit_Percent__c</fullName>
        <description>A Blended GP%</description>
        <label>GP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit_Value__c</fullName>
        <description>This is a blended GP$</description>
        <label>GP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traction_Unit__c</fullName>
        <formula>TEXT( QuoteItem__r.Traction_Unit__c )</formula>
        <label>Traction Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_In_Price__c</fullName>
        <label>Trade In Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Award_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that Unit Award has been overridden by user</description>
        <label>Unit Award Overridden</label>
        <type>Checkbox</type>
    </fields>
    <label>Toro Quote Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQ-{0000000}</displayFormat>
        <label>Toro Quote Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toro Quote Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>